Fix (uI): Domain truncate issue || consistent Domain UX (#21574)
* fixed domain truncate

* improved domain ux

* fixed sonar cases

* removed unnecessary states

* addressed comments

* applied max width

--- a/openmetadata-ui/src/main/resources/ui/src/components/DataAssets/DataAssetsHeader/data-asset-header.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/DataAssets/DataAssetsHeader/data-asset-header.less
@@ -75,16 +75,22 @@
     color: @primary-heading-color;
     max-width: 200px;
   }
-  .owner-label-container {
+  .owner-label-container,
+  .domain-label-container {
     max-width: 148px;
   }
-  .domain-link-text.render-domain-lebel-style {
-    color: @grey-700;
-    display: inline-block;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  .domain-link-container {
+    //consistent width for data-asset-header
     max-width: 148px;
+
+    .domain-link-text.render-domain-lebel-style {
+      color: @grey-700;
+      display: inline-block;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      max-width: 148px;
+    }
   }
   a.source-url-link {
     text-decoration: none;
