--- a/openmetadata-ui/src/main/resources/ui/src/components/common/DomainLabel/domain-label.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/common/DomainLabel/domain-label.less
@@ -11,6 +11,9 @@
  *  limitations under the License.
  */
 @import (reference) '../../../styles/variables.less';
+.domain-label-container {
+  max-width: 100%;
+}
 .domain-link.ant-typography {
   color: @primary-heading-color;
 }
@@ -21,7 +24,7 @@
 }
 
 .domain-link-container {
-  max-width: 148px;
+  max-width: 100%;
   .domain-link-text {
     text-overflow: ellipsis;
     overflow: hidden;
